--- a/index.html
+++ b/index.html
@@ -82,55 +82,6 @@
             overflow-x: hidden;
         }
 
-        /* Loader */
-        .loader {
-            position: fixed;
-            inset: 0;
-            background: var(--color-bg);
-            z-index: 9999;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 1;
-            transition: opacity 0.5s ease;
-        }
-
-        .loader.hidden {
-            opacity: 0;
-            pointer-events: none;
-            display: none;
-        }
-
-        .loader-content {
-            text-align: center;
-        }
-
-        .loader-logo-img {
-            height: 50px;
-            width: auto;
-            margin-bottom: 24px;
-        }
-
-        .loader-bar {
-            width: 200px;
-            height: 2px;
-            background: var(--color-border);
-            border-radius: 2px;
-            overflow: hidden;
-        }
-
-        .loader-progress {
-            width: 0%;
-            height: 100%;
-            background: var(--color-accent);
-            animation: loading 1.5s ease forwards;
-        }
-
-        @keyframes loading {
-            0% { width: 0%; }
-            100% { width: 100%; }
-        }
-
         /* Typography */
         h1, h2, h3, h4, h5, h6 {
             font-family: var(--font-display);
@@ -2116,16 +2067,6 @@
 </head>
 <body>
 
-    <!-- Loader -->
-    <div class="loader" id="loader">
-        <div class="loader-content">
-            <img src="/rkdsymbol.png" alt="RKD Bio" class="loader-logo-img">
-            <div class="loader-bar">
-                <div class="loader-progress"></div>
-            </div>
-        </div>
-    </div>
-
     <!-- Navigation -->
     <nav id="navbar">
         <div class="container">
@@ -2517,7 +2458,7 @@
                             </div>
                             <div class="contact-item-content">
                                 <h4>Email</h4>
-                                <p><a href="/cdn-cgi/l/email-protection#83eaede5ecc3f1e8e7e1eaecade0ecee"><span class="__cf_email__" data-cfemail="d5bcbbb3ba95a7beb1b7bcbafbb6bab8">[email&#160;protected]</span></a></p>
+                                <p><a href="mailto:info@rkdbio.com">info@rkdbio.com</a></p>
                             </div>
                         </div>
                     </div>
@@ -2635,17 +2576,7 @@
         </div>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-        // Page Loader
-        window.addEventListener('load', function() {
-            const loader = document.getElementById('loader');
-            if (loader) {
-                setTimeout(() => {
-                    loader.classList.add('hidden');
-                }, 1800);
-            }
-        });
-
+    <script>
         // Initialize Lucide icons (with error handling)
         try {
             if (typeof lucide !== 'undefined') {
@@ -2823,3 +2754,13 @@
         
         function resetForm() {
             const contactForm = document.getElementById('contactForm');
+            const formSuccess = document.getElementById('formSuccess');
+            if (contactForm && formSuccess) {
+                contactForm.reset();
+                contactForm.style.display = 'block';
+                formSuccess.style.display = 'none';
+            }
+        }
+    </script>
+</body>
+</html>
